--- a/NPMRegistry/NPMRegistry.csproj
+++ b/NPMRegistry/NPMRegistry.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Amazon.Lambda.AspNetCoreServer.Hosting" Version="1.7.0" />
+        <PackageReference Include="Amazon.Lambda.S3Events" Version="3.1.0" />
         <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
         <PackageReference Include="AWSSDK.S3" Version="3.7.307.10" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
