--- a/NPMRegistry/Properties/launchSettings.json
+++ b/NPMRegistry/Properties/launchSettings.json
@@ -39,6 +39,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Mock Lambda Test Tool": {
+      "commandName": "Executable",
+      "commandLineArgs": "--port 5050 --function-handler \"NPMRegistry::NPMRegistry.VersionHandler::Handler\"",
+      "workingDirectory": "$(ProjectDir)\\bin\\Debug\\net8.0",
+      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\.store\\amazon.lambda.testtool-8.0\\0.15.1\\amazon.lambda.testtool-8.0\\0.15.1\\tools\\net8.0\\any\\Amazon.Lambda.TestTool.BlazorTester.dll",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
